--- a/MODAMSWeb/Areas/Admin/Views/Employees/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Employees/Index.cshtml
@@ -1,14 +1,18 @@
-﻿@model List<MODAMS.Models.ViewModels.vwEmployees>
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using System.Globalization
+@inject IViewLocalizer Localizer
+
+@model List<MODAMS.Models.ViewModels.vwEmployees>
 
 <!-- PAGE-HEADER -->
 <div class="page-header">
     <div>
-        <h1 class="page-title">Employees</h1>
+        <h1 class="page-title">@Localizer["Employees"]</h1>
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">Dashboard</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Employee List</li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a></li>
+            <li class="breadcrumb-item active" aria-current="page">@Localizer["EmployeeList"]</li>
         </ol>
     </div>
 </div>
@@ -19,7 +23,7 @@
         <div class="card">
             <div class="card-body p-4">
                 <div class="d-flex align-items-center justify-content-between">
-                    <h4 class="m-0">Employee List</h4>
+                    <h4 class="m-0">@Localizer["EmployeeList"]</h4>
                     <div class="btn-list">
                         @*<a class="btn btn-outline-primary" asp-area="Admin" asp-controller="Employees" asp-action="Index">
                             <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M21.5,13h-8.0005493C13.2234497,13.0001831,12.9998169,13.223999,13,13.5v8.0005493C13.0001831,21.7765503,13.223999,22.0001831,13.5,22h8.0006104C21.7765503,21.9998169,22.0001831,21.776001,22,21.5v-8.0006104C21.9998169,13.2234497,21.776001,12.9998169,21.5,13z M21,21h-7v-7h7V21z M10.5,2H2.4993896C2.2234497,2.0001831,1.9998169,2.223999,2,2.5v8.0005493C2.0001831,10.7765503,2.223999,11.0001831,2.5,11h8.0006104C10.7765503,10.9998169,11.0001831,10.776001,11,10.5V2.4993896C10.9998169,2.2234497,10.776001,1.9998169,10.5,2z M10,10H3V3h7V10z M10.5,13H2.4993896C2.2234497,13.0001831,1.9998169,13.223999,2,13.5v8.0005493C2.0001831,21.7765503,2.223999,22.0001831,2.5,22h8.0006104C10.7765503,21.9998169,11.0001831,21.776001,11,21.5v-8.0006104C10.9998169,13.2234497,10.776001,12.9998169,10.5,13z M10,21H3v-7h7V21z M21.5,2h-8.0005493C13.2234497,2.0001831,12.9998169,2.223999,13,2.5v8.0005493C13.0001831,10.7765503,13.223999,11.0001831,13.5,11h8.0006104C21.7765503,10.9998169,22.0001831,10.776001,22,10.5V2.4993896C21.9998169,2.2234497,21.776001,1.9998169,21.5,2z M21,10h-7V3h7V10z" /></svg>
@@ -36,7 +40,7 @@
         <div class="btn-list">
             <a asp-area="Admin" asp-controller="Employees" asp-action="CreateEmployee" class="btn btn-info-gradient trShadow">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M16,11.5h-3.5V8c0-0.276123-0.223877-0.5-0.5-0.5S11.5,7.723877,11.5,8v3.5H8c-0.276123,0-0.5,0.223877-0.5,0.5s0.223877,0.5,0.5,0.5h3.5v3.5005493C11.5001831,16.2765503,11.723999,16.5001831,12,16.5h0.0006104C12.2765503,16.4998169,12.5001831,16.276001,12.5,16v-3.5H16c0.276123,0,0.5-0.223877,0.5-0.5S16.276123,11.5,16,11.5z M12,2C6.4771729,2,2,6.4771729,2,12s4.4771729,10,10,10c5.5202026-0.0062866,9.9937134-4.4797974,10-10C22,6.4771729,17.5228271,2,12,2z M12,21c-4.9705811,0-9-4.0294189-9-9s4.0294189-9,9-9c4.9682617,0.0056152,8.9943848,4.0317383,9,9C21,16.9705811,16.9705811,21,12,21z" /></svg>
-                New Employee
+                @Localizer["NewEmployee"]
             </a>
         </div>
     </div>
@@ -47,14 +51,14 @@
                     <table id="tblEmployees" class="table text-nowrap mb-0 table-bordered border-top border-bottom project-list-main">
                         <thead class="table-head">
                             <tr>
-                                <th class="bg-transparent border-bottom-0 w-5">S.No</th>
-                                <th class="bg-transparent border-bottom-0">Full Name</th>
-                                <th class="bg-transparent border-bottom-0">Job Title</th>
-                                <th class="bg-transparent border-bottom-0">Phone</th>
-                                <th class="bg-transparent border-bottom-0">Role Name</th>
-                                <th class="bg-transparent border-bottom-0">Supervisor</th>
-                                <th class="bg-transparent border-bottom-0">Is Active</th>
-                                <th class="bg-transparent border-bottom-0 no-btn">Action</th>
+                                <th class="bg-transparent border-bottom-0 w-5">@Localizer["SNo"]</th>
+                                <th class="bg-transparent border-bottom-0">@Localizer["FullName"]</th>
+                                <th class="bg-transparent border-bottom-0">@Localizer["JobTitle"]</th>
+                                <th class="bg-transparent border-bottom-0">@Localizer["Phone"]</th>
+                                <th class="bg-transparent border-bottom-0">@Localizer["RoleName"]</th>
+                                <th class="bg-transparent border-bottom-0">@Localizer["Supervisor"]</th>
+                                <th class="bg-transparent border-bottom-0">@Localizer["IsActive"]</th>
+                                <th class="bg-transparent border-bottom-0 no-btn">@Localizer["Action"]</th>
                             </tr>
                         </thead>
                         <tbody class="table-body">
@@ -91,13 +95,13 @@
                                                 if (employee.IsActive)
                                                 {
                                                     <span class="text-primary">
-                                                        <span class="mb-0 mt-1 badge rounded-pill bg-primary-transparent text-blue">Active</span>
+                                                        <span class="mb-0 mt-1 badge rounded-pill bg-primary-transparent text-blue">@Localizer["Active"]</span>
                                                     </span>
                                                 }
                                                 else
                                                 {
                                                     <span class="text-secondary">
-                                                        <span class="mb-0 mt-1 badge rounded-pill bg-secondary-transparent text-danger">Locked</span>
+                                                        <span class="mb-0 mt-1 badge rounded-pill bg-secondary-transparent text-danger">@Localizer["Locked"]</span>
                                                     </span>
                                                 }
                                             }
@@ -105,7 +109,7 @@
 
                                         <td>
                                             <div class="d-flex align-items-stretch">
-                                                <a asp-controller="Employees" asp-action="EditEmployee" asp-route-id="@employee.Id" class="btn btn-sm btn-outline-primary border me-2" data-bs-toggle="tooltip" data-bs-original-title="Edit Employee">
+                                                <a asp-controller="Employees" asp-action="EditEmployee" asp-route-id="@employee.Id" class="btn btn-sm btn-outline-primary border me-2" data-bs-toggle="tooltip" data-bs-original-title="@Localizer["EditEmployee"]">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 20">
                                                         <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
                                                     </svg>
@@ -113,7 +117,7 @@
                                                 @{
                                                     if (employee.IsActive)
                                                     {
-                                                        <a class="btn btn-sm btn-outline-secondary border me-2" data-bs-toggle="dropdown" data-bs-original-title="Lock Employee">
+                                                        <a class="btn btn-sm btn-outline-secondary border me-2" data-bs-toggle="dropdown" data-bs-original-title="@Localizer["LockEmployee"]">
                                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-lock" viewBox="0 0 16 20">
                                                                 <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z" />
                                                             </svg>
@@ -121,7 +125,7 @@
                                                     }
                                                     else
                                                     {
-                                                        <a class="btn btn-sm btn-outline-primary border me-2" data-bs-toggle="dropdown" data-bs-original-title="Lock Employee">
+                                                        <a class="btn btn-sm btn-outline-primary border me-2" data-bs-toggle="dropdown" data-bs-original-title="@Localizer["UnlockEmployee"]">
                                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-unlock" viewBox="0 0 16 20">
                                                                 <path d="M11 1a2 2 0 0 0-2 2v4a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V9a2 2 0 0 1 2-2h5V3a3 3 0 0 1 6 0v4a.5.5 0 0 1-1 0V3a2 2 0 0 0-2-2zM3 8a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V9a1 1 0 0 0-1-1H3z" />
                                                             </svg>
@@ -135,20 +139,22 @@
                                                             {
                                                                 <h4 class="dropdown-title"><i class="fa fa-lock"></i> Lock Account</h4>
                                                                 <br />
-                                                                <p>Are you sure you want to lock this account?</p>
+                                                                //<p>Are you sure you want to lock this account?</p>
+                                                                <p>@Localizer["LockConfirmationMessage"]</p>
                                                                 <a asp-area="Admin" asp-controller="Employees" asp-action="LockAccount" asp-route-id="@employee.Id" class="btn btn-secondary btn-sm">
                                                                     <i class="fa fa-lock"></i>
-                                                                    Lock Account
+                                                                    @Localizer["LockAccount"]
                                                                 </a>
                                                             }
                                                             else
                                                             {
-                                                                <h4 class="dropdown-title"><i class="fa fa-unlock"></i>  Unlock Account</h4>
+                                                                <h4 class="dropdown-title"><i class="fa fa-unlock"></i>  @Localizer["UnlockAccount"]</h4>
                                                                 <br />
-                                                                <p>Are you sure you want to unlock this account?</p>
+                                                                //<p>Are you sure you want to unlock this account?</p>\
+                                                                <p>@Localizer["UnlockConfirmationMessage"]</p>
                                                                 <a asp-area="Admin" asp-controller="Employees" asp-action="UnlockAccount" asp-route-id="@employee.Id" class="btn btn-primary btn-sm">
                                                                     <i class="fa fa-unlock"></i>
-                                                                    Unlock Account
+                                                                    @Localizer["UnlockAccount"]
                                                                 </a>
                                                             }
                                                         }
@@ -165,7 +171,7 @@
                 </div>
             </div>
             <div class="card-footer">
-                <a asp-area="Users" asp-controller="Home" asp-action="Index" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
+                <a asp-area="Users" asp-controller="Home" asp-action="Index" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;@Localizer["Previous"]</a>
             </div>
         </div>
     </div>
